--- a/ToDo/package.json
+++ b/ToDo/package.json
@@ -7,11 +7,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.2.1",
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/free-brands-svg-icons": "^6.2.1",
+    "@fortawesome/free-regular-svg-icons": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@fortawesome/vue-fontawesome": "^3.0.2",
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.2",
     "bootstrap-vue": "^2.23.1",
     "jquery": "^3.6.1",
     "moment": "^2.29.4",
+    "toastr": "^2.1.4",
     "vue": "^3.2.41"
   },
   "devDependencies": {
