--- a/ToDo/package.json
+++ b/ToDo/package.json
@@ -4,7 +4,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "sh deploy.sh"
+
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.2.1",
